--- a/bowl_pool/test/2023-2024/results.html
+++ b/bowl_pool/test/2023-2024/results.html
@@ -452,33 +452,481 @@ ul.auto-toc {
 <td>1.25</td>
 <td>0.0</td>
 </tr>
+<tr><td>2</td>
+<td>New Orleans Bowl</td>
+<td>Jacksonville State</td>
+<td>Louisiana Lafayette</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>3</td>
+<td>Cure Bowl</td>
+<td>Appalachian State</td>
+<td>Miami (OH)</td>
+<td>6.5</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>4</td>
+<td>New MexicoBowl</td>
+<td>New Mexico State</td>
+<td>Fresno State</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>5</td>
+<td>LA Bowl</td>
+<td>UCLA</td>
+<td>Boise State</td>
+<td>4.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>6</td>
+<td>Independence Bowl</td>
+<td>Texas Tech</td>
+<td>California</td>
+<td>3.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>7</td>
+<td>Famous Toastery Bowl</td>
+<td>Old Dominion</td>
+<td>Western Kentucky</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+</tr>
+<tr><td>8</td>
+<td>Frisco Bowl</td>
+<td>UTSA</td>
+<td>Marshall</td>
+<td>9.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>9</td>
+<td>Boca Raton Bowl</td>
+<td>Syracuse</td>
+<td>South Florida</td>
+<td>4.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
+<tr><td>10</td>
+<td>Gasparilla Bowl</td>
+<td>UCF</td>
+<td>Georgia Tech</td>
+<td>4.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
+<tr><td>11</td>
+<td>Camellia Bowl</td>
+<td>Arkansas State</td>
+<td>Northern Illinois</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>12</td>
+<td>Birmingham Bowl</td>
+<td>Troy</td>
+<td>Duke</td>
+<td>7.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>0.0</td>
+</tr>
+<tr><td>13</td>
+<td>Armed Forces Bowl</td>
+<td>James Madison</td>
+<td>Air Force</td>
+<td>2.5</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>14</td>
+<td>IdahoPotato Bowl</td>
+<td>Georgia State</td>
+<td>Utah State</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>15</td>
+<td>68 Ventures Bowl</td>
+<td>South Alabama</td>
+<td>Eastern Michigan</td>
+<td>15.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>16</td>
+<td>Las Vegas Bowl</td>
+<td>Utah</td>
+<td>Northwestern</td>
+<td>7.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>17</td>
+<td>HawaiiBowl</td>
+<td>San Jose State</td>
+<td>Coastal Carolina</td>
+<td>9.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>9.25</strong></td>
+<td><strong>8.5</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>8.75</strong></td>
+<td><strong>6.25</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>8.0</strong></td>
+<td><strong>6.0</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>6.75</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>7.75</strong></td>
+<td><strong>10.5</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>7.0</strong></td>
 </tr>
 </tbody>
 </table>
