--- a/bowl_pool/test/2023-2024/rankings.html
+++ b/bowl_pool/test/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-16 16:58:32</em></div>
-<div class="line"><em>Last bowl scored:  Myrtle Beach Bowl (Georgia Southern vs. Ohio)</em></div>
+<div class="line"><em>Last updated:  2023-12-24 11:05:33</em></div>
+<div class="line"><em>Last bowl scored:  HawaiiBowl (San Jose State vs. Coastal Carolina)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. #MamaBear 1.25</div>
-<div class="line">1. Badgers Rock! 1.25</div>
-<div class="line">1. Barkside Ballers (Wylie &amp; Flapjack) 1.25</div>
-<div class="line">1. bugabugaroo 1.25</div>
-<div class="line">1. Dbo 1.25</div>
-<div class="line">1. GlamKam 1.25</div>
-<div class="line">1. LadyLonghorn 1.25</div>
-<div class="line">1. Rando Cal Rece Ian 1.25</div>
-<div class="line">1. Sascha Picks Dogs 1.25</div>
-<div class="line">1. Sir Fluffy McFlufferson 1.25</div>
-<div class="line">1. The New Guy 1.25</div>
-<div class="line">12. Aggie Austin 0.0</div>
-<div class="line">12. Bear-in-Law 0.0</div>
-<div class="line">12. Big 12 Bibby 0.0</div>
-<div class="line">12. COOKIES 0.0</div>
-<div class="line">12. Dazed &amp; Confoosballed 0.0</div>
-<div class="line">12. em&amp;em 0.0</div>
-<div class="line">12. Kylo Bad Dog 0.0</div>
-<div class="line">12. MamaDAWG 0.0</div>
-<div class="line">12. Manda Panda 0.0</div>
-<div class="line">12. SEC Shipley 0.0</div>
-<div class="line">12. WD50 0.0</div>
+<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 17.5</strong></div>
+<div class="line">2. <strong>SEC Shipley 14.75</strong></div>
+<div class="line">3. <strong>Dbo 14.5</strong></div>
+<div class="line">3. Sascha Picks Dogs 14.5</div>
+<div class="line">5. LadyLonghorn 14.25</div>
+<div class="line">6. bugabugaroo 14.0</div>
+<div class="line">7. The New Guy 13.0</div>
+<div class="line">8. Kylo Bad Dog 12.5</div>
+<div class="line">9. MamaDAWG 11.0</div>
+<div class="line">10. Rando Cal Rece Ian 10.5</div>
+<div class="line">11. #MamaBear 10.0</div>
+<div class="line">12. Aggie Austin 9.25</div>
+<div class="line">13. GlamKam 9.0</div>
+<div class="line">13. Sir Fluffy McFlufferson 9.0</div>
+<div class="line">15. Bear-in-Law 8.75</div>
+<div class="line">16. Badgers Rock! 8.5</div>
+<div class="line">17. COOKIES 8.0</div>
+<div class="line">18. Manda Panda 7.75</div>
+<div class="line">19. WD50 7.0</div>
+<div class="line">20. em&amp;em 6.75</div>
+<div class="line">21. Big 12 Bibby 6.25</div>
+<div class="line">22. <strong>Dazed &amp; Confoosballed 6.0</strong></div>
 </div>
 </div>
 </body>
