--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,31 +364,31 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-24 11:08:42</em></div>
-<div class="line"><em>Last bowl scored:  HawaiiBowl (San Jose State vs. Coastal Carolina)</em></div>
+<div class="line"><em>Last updated:  2023-12-27 14:01:41</em></div>
+<div class="line"><em>Last bowl scored:  Guaranteed Rate Bowl (Kansas vs. UNLV)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 17.5</strong></div>
-<div class="line">2. <strong>SEC Shipley 14.75</strong></div>
-<div class="line">3. <strong>Dbo 14.5</strong></div>
-<div class="line">3. <strong>Sascha Picks Dogs 14.5</strong></div>
-<div class="line">5. LadyLonghorn 14.25</div>
-<div class="line">6. bugabugaroo 14.0</div>
-<div class="line">7. The New Guy 13.0</div>
-<div class="line">8. Kylo Bad Dog 12.5</div>
-<div class="line">9. MamaDAWG 11.0</div>
-<div class="line">10. Rando Cal Rece Ian 10.5</div>
-<div class="line">11. #MamaBear 10.0</div>
-<div class="line">12. Aggie Austin 9.25</div>
-<div class="line">13. GlamKam 9.0</div>
-<div class="line">13. Sir Fluffy McFlufferson 9.0</div>
-<div class="line">15. Bear-in-Law 8.75</div>
-<div class="line">16. Badgers Rock! 8.5</div>
-<div class="line">17. COOKIES 8.0</div>
-<div class="line">18. Manda Panda 7.75</div>
-<div class="line">19. WD50 7.0</div>
-<div class="line">20. em&amp;em 6.75</div>
-<div class="line">21. Big 12 Bibby 6.25</div>
+<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 20.5</strong></div>
+<div class="line">2. <strong>SEC Shipley 17.75</strong></div>
+<div class="line">3. LadyLonghorn 17.25</div>
+<div class="line">4. bugabugaroo 17.0</div>
+<div class="line">5. <strong>Dbo 16.5</strong></div>
+<div class="line">6. The New Guy 16.0</div>
+<div class="line">7. <strong>Sascha Picks Dogs 14.5</strong></div>
+<div class="line">8. #MamaBear 14.0</div>
+<div class="line">8. MamaDAWG 14.0</div>
+<div class="line">10. Kylo Bad Dog 13.5</div>
+<div class="line">10. Rando Cal Rece Ian 13.5</div>
+<div class="line">12. Aggie Austin 12.25</div>
+<div class="line">13. GlamKam 12.0</div>
+<div class="line">14. Bear-in-Law 11.75</div>
+<div class="line">15. Badgers Rock! 11.5</div>
+<div class="line">16. COOKIES 11.0</div>
+<div class="line">16. Sir Fluffy McFlufferson 11.0</div>
+<div class="line">18. Manda Panda 10.75</div>
+<div class="line">19. WD50 10.0</div>
+<div class="line">20. em&amp;em 9.75</div>
+<div class="line">21. Big 12 Bibby 9.25</div>
 <div class="line">22. <strong>Dazed &amp; Confoosballed 6.0</strong></div>
 </div>
 </div>
