--- a/bowl_pool/test/2023-2024/rankings.html
+++ b/bowl_pool/test/2023-2024/rankings.html
@@ -364,14 +364,14 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-24 11:05:33</em></div>
+<div class="line"><em>Last updated:  2023-12-24 11:17:07</em></div>
 <div class="line"><em>Last bowl scored:  HawaiiBowl (San Jose State vs. Coastal Carolina)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 17.5</strong></div>
 <div class="line">2. <strong>SEC Shipley 14.75</strong></div>
 <div class="line">3. <strong>Dbo 14.5</strong></div>
-<div class="line">3. Sascha Picks Dogs 14.5</div>
+<div class="line">3. <strong>Sascha Picks Dogs 14.5</strong></div>
 <div class="line">5. LadyLonghorn 14.25</div>
 <div class="line">6. bugabugaroo 14.0</div>
 <div class="line">7. The New Guy 13.0</div>
