--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -900,33 +900,117 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>18</td>
+<td>Quick Lane Bowl</td>
+<td>Minnesota</td>
+<td>Bowling Green</td>
+<td>5.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>19</td>
+<td>First Responder Bowl</td>
+<td>Texas State</td>
+<td>Rice</td>
+<td>4.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>20</td>
+<td>Guaranteed Rate Bowl</td>
+<td>Kansas</td>
+<td>UNLV</td>
+<td>11.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>10.0</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>6.25</strong></td>
 <td><strong>14.0</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>6.75</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>14.25</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>11.5</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>9.25</strong></td>
+<td><strong>17.0</strong></td>
 <td><strong>11.0</strong></td>
-<td><strong>7.75</strong></td>
-<td><strong>10.5</strong></td>
+<td><strong>6.0</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>9.75</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>10.75</strong></td>
+<td><strong>13.5</strong></td>
 <td><strong>14.5</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>10.0</strong></td>
 </tr>
 </tbody>
 </table>
