--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,17 +364,17 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-27 14:01:41</em></div>
+<div class="line"><em>Last updated:  2023-12-27 14:04:41</em></div>
 <div class="line"><em>Last bowl scored:  Guaranteed Rate Bowl (Kansas vs. UNLV)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 20.5</strong></div>
 <div class="line">2. <strong>SEC Shipley 17.75</strong></div>
-<div class="line">3. LadyLonghorn 17.25</div>
-<div class="line">4. bugabugaroo 17.0</div>
-<div class="line">5. <strong>Dbo 16.5</strong></div>
+<div class="line">3. <strong>LadyLonghorn 17.25</strong></div>
+<div class="line">4. <strong>bugabugaroo 17.0</strong></div>
+<div class="line">5. Dbo 16.5</div>
 <div class="line">6. The New Guy 16.0</div>
-<div class="line">7. <strong>Sascha Picks Dogs 14.5</strong></div>
+<div class="line">7. Sascha Picks Dogs 14.5</div>
 <div class="line">8. #MamaBear 14.0</div>
 <div class="line">8. MamaDAWG 14.0</div>
 <div class="line">10. Kylo Bad Dog 13.5</div>
