--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-27 14:04:41</em></div>
-<div class="line"><em>Last bowl scored:  Guaranteed Rate Bowl (Kansas vs. UNLV)</em></div>
+<div class="line"><em>Last updated:  2023-12-28 09:14:36</em></div>
+<div class="line"><em>Last bowl scored:  TexasBowl (Texas A&amp;M vs. Oklahoma State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 20.5</strong></div>
-<div class="line">2. <strong>SEC Shipley 17.75</strong></div>
-<div class="line">3. <strong>LadyLonghorn 17.25</strong></div>
-<div class="line">4. <strong>bugabugaroo 17.0</strong></div>
-<div class="line">5. Dbo 16.5</div>
-<div class="line">6. The New Guy 16.0</div>
-<div class="line">7. Sascha Picks Dogs 14.5</div>
-<div class="line">8. #MamaBear 14.0</div>
-<div class="line">8. MamaDAWG 14.0</div>
-<div class="line">10. Kylo Bad Dog 13.5</div>
-<div class="line">10. Rando Cal Rece Ian 13.5</div>
-<div class="line">12. Aggie Austin 12.25</div>
-<div class="line">13. GlamKam 12.0</div>
-<div class="line">14. Bear-in-Law 11.75</div>
-<div class="line">15. Badgers Rock! 11.5</div>
-<div class="line">16. COOKIES 11.0</div>
-<div class="line">16. Sir Fluffy McFlufferson 11.0</div>
-<div class="line">18. Manda Panda 10.75</div>
-<div class="line">19. WD50 10.0</div>
-<div class="line">20. em&amp;em 9.75</div>
-<div class="line">21. Big 12 Bibby 9.25</div>
-<div class="line">22. <strong>Dazed &amp; Confoosballed 6.0</strong></div>
+<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 24.75</strong></div>
+<div class="line">2. <strong>bugabugaroo 20.25</strong></div>
+<div class="line">3. <strong>Dbo 19.75</strong></div>
+<div class="line">3. <strong>SEC Shipley 19.75</strong></div>
+<div class="line">5. Sascha Picks Dogs 17.75</div>
+<div class="line">6. LadyLonghorn 17.25</div>
+<div class="line">7. MamaDAWG 17.0</div>
+<div class="line">8. Kylo Bad Dog 16.75</div>
+<div class="line">9. #MamaBear 16.25</div>
+<div class="line">10. The New Guy 16.0</div>
+<div class="line">11. Rando Cal Rece Ian 15.5</div>
+<div class="line">12. COOKIES 15.25</div>
+<div class="line">13. Manda Panda 15.0</div>
+<div class="line">14. GlamKam 14.25</div>
+<div class="line">15. Bear-in-Law 14.0</div>
+<div class="line">15. em&amp;em 14.0</div>
+<div class="line">17. Sir Fluffy McFlufferson 13.0</div>
+<div class="line">18. Badgers Rock! 12.75</div>
+<div class="line">19. Aggie Austin 12.25</div>
+<div class="line">20. Big 12 Bibby 11.5</div>
+<div class="line">21. WD50 11.25</div>
+<div class="line">22. <strong>Dazed &amp; Confoosballed 7.0</strong></div>
 </div>
 </div>
 </body>
