--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -984,33 +984,145 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>21</td>
+<td>Military Bowl</td>
+<td>Virginia Tech</td>
+<td>Tulane</td>
+<td>7.5</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>22</td>
+<td>Duke's Mayo Bowl</td>
+<td>West Virginia</td>
+<td>North Carolina</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>23</td>
+<td>Holiday Bowl</td>
+<td>Louisville</td>
+<td>USC</td>
+<td>7.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>24</td>
+<td>TexasBowl</td>
+<td>Texas A&amp;M</td>
+<td>Oklahoma State</td>
+<td>3.5</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>14.0</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>12.25</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>9.75</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>17.25</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>24.75</strong></td>
 <td><strong>14.0</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>14.5</strong></td>
+<td><strong>11.5</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>7.0</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>15.5</strong></td>
 <td><strong>17.75</strong></td>
-<td><strong>11.0</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>13.0</strong></td>
 <td><strong>16.0</strong></td>
-<td><strong>10.0</strong></td>
+<td><strong>11.25</strong></td>
 </tr>
 </tbody>
 </table>
