--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-28 09:14:36</em></div>
-<div class="line"><em>Last bowl scored:  TexasBowl (Texas A&amp;M vs. Oklahoma State)</em></div>
+<div class="line"><em>Last updated:  2023-12-29 08:19:54</em></div>
+<div class="line"><em>Last bowl scored:  Alamo Bowl (Arizona vs. Oklahoma)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 24.75</strong></div>
-<div class="line">2. <strong>bugabugaroo 20.25</strong></div>
-<div class="line">3. <strong>Dbo 19.75</strong></div>
-<div class="line">3. <strong>SEC Shipley 19.75</strong></div>
-<div class="line">5. Sascha Picks Dogs 17.75</div>
-<div class="line">6. LadyLonghorn 17.25</div>
-<div class="line">7. MamaDAWG 17.0</div>
-<div class="line">8. Kylo Bad Dog 16.75</div>
-<div class="line">9. #MamaBear 16.25</div>
-<div class="line">10. The New Guy 16.0</div>
-<div class="line">11. Rando Cal Rece Ian 15.5</div>
-<div class="line">12. COOKIES 15.25</div>
-<div class="line">13. Manda Panda 15.0</div>
-<div class="line">14. GlamKam 14.25</div>
-<div class="line">15. Bear-in-Law 14.0</div>
-<div class="line">15. em&amp;em 14.0</div>
-<div class="line">17. Sir Fluffy McFlufferson 13.0</div>
-<div class="line">18. Badgers Rock! 12.75</div>
-<div class="line">19. Aggie Austin 12.25</div>
-<div class="line">20. Big 12 Bibby 11.5</div>
-<div class="line">21. WD50 11.25</div>
-<div class="line">22. <strong>Dazed &amp; Confoosballed 7.0</strong></div>
+<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 29.5</strong></div>
+<div class="line">2. <strong>Dbo 24.5</strong></div>
+<div class="line">3. <strong>bugabugaroo 23.5</strong></div>
+<div class="line">4. Kylo Bad Dog 21.5</div>
+<div class="line">4. Sascha Picks Dogs 21.5</div>
+<div class="line">6. SEC Shipley 20.75</div>
+<div class="line">7. MamaDAWG 20.25</div>
+<div class="line">8. #MamaBear 18.5</div>
+<div class="line">8. Manda Panda 18.5</div>
+<div class="line">10. LadyLonghorn 18.25</div>
+<div class="line">11. Bear-in-Law 17.25</div>
+<div class="line">12. The New Guy 17.0</div>
+<div class="line">13. Rando Cal Rece Ian 16.5</div>
+<div class="line">14. COOKIES 16.25</div>
+<div class="line">15. GlamKam 15.25</div>
+<div class="line">16. em&amp;em 15.0</div>
+<div class="line">17. Badgers Rock! 14.75</div>
+<div class="line">18. Aggie Austin 14.25</div>
+<div class="line">19. Sir Fluffy McFlufferson 14.0</div>
+<div class="line">20. Big 12 Bibby 13.75</div>
+<div class="line">21. WD50 12.25</div>
+<div class="line">22. <strong>Dazed &amp; Confoosballed 8.0</strong></div>
 </div>
 </div>
 </body>
