--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -1096,33 +1096,145 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.25</td>
 </tr>
+<tr><td>25</td>
+<td>Fenway Bowl</td>
+<td>SMU</td>
+<td>Boston College</td>
+<td>10.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>26</td>
+<td>Pinstripe Bowl</td>
+<td>Miami</td>
+<td>Rutgers</td>
+<td>3.5</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>27</td>
+<td>Pop-Tarts Bowl</td>
+<td>Kansas State</td>
+<td>NC State</td>
+<td>3.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>28</td>
+<td>Alamo Bowl</td>
+<td>Arizona</td>
+<td>Oklahoma</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>16.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>14.0</strong></td>
+<td><strong>18.5</strong></td>
 <td><strong>14.25</strong></td>
-<td><strong>16.75</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>29.5</strong></td>
 <td><strong>17.25</strong></td>
-<td><strong>17.0</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>8.0</strong></td>
+<td><strong>24.5</strong></td>
 <td><strong>15.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>11.25</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>12.25</strong></td>
 </tr>
 </tbody>
 </table>
