--- a/bowl_pool/test/2023-2024/rankings.html
+++ b/bowl_pool/test/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-24 11:17:07</em></div>
-<div class="line"><em>Last bowl scored:  HawaiiBowl (San Jose State vs. Coastal Carolina)</em></div>
+<div class="line"><em>Last updated:  2023-12-29 19:27:25</em></div>
+<div class="line"><em>Last bowl scored:  LibertyBowl (Iowa State vs. Memphis)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 17.5</strong></div>
-<div class="line">2. <strong>SEC Shipley 14.75</strong></div>
-<div class="line">3. <strong>Dbo 14.5</strong></div>
-<div class="line">3. <strong>Sascha Picks Dogs 14.5</strong></div>
-<div class="line">5. LadyLonghorn 14.25</div>
-<div class="line">6. bugabugaroo 14.0</div>
-<div class="line">7. The New Guy 13.0</div>
-<div class="line">8. Kylo Bad Dog 12.5</div>
-<div class="line">9. MamaDAWG 11.0</div>
-<div class="line">10. Rando Cal Rece Ian 10.5</div>
-<div class="line">11. #MamaBear 10.0</div>
-<div class="line">12. Aggie Austin 9.25</div>
-<div class="line">13. GlamKam 9.0</div>
-<div class="line">13. Sir Fluffy McFlufferson 9.0</div>
-<div class="line">15. Bear-in-Law 8.75</div>
-<div class="line">16. Badgers Rock! 8.5</div>
-<div class="line">17. COOKIES 8.0</div>
-<div class="line">18. Manda Panda 7.75</div>
-<div class="line">19. WD50 7.0</div>
-<div class="line">20. em&amp;em 6.75</div>
-<div class="line">21. Big 12 Bibby 6.25</div>
-<div class="line">22. <strong>Dazed &amp; Confoosballed 6.0</strong></div>
+<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 31.0</strong></div>
+<div class="line">2. <strong>Dbo 26.0</strong></div>
+<div class="line">3. <strong>bugabugaroo 25.5</strong></div>
+<div class="line">4. Kylo Bad Dog 25.0</div>
+<div class="line">5. MamaDAWG 23.75</div>
+<div class="line">6. SEC Shipley 23.25</div>
+<div class="line">7. Sascha Picks Dogs 23.0</div>
+<div class="line">8. #MamaBear 22.0</div>
+<div class="line">9. LadyLonghorn 21.75</div>
+<div class="line">10. Manda Panda 21.5</div>
+<div class="line">11. The New Guy 19.5</div>
+<div class="line">12. Bear-in-Law 19.25</div>
+<div class="line">13. Rando Cal Rece Ian 18.5</div>
+<div class="line">14. GlamKam 17.25</div>
+<div class="line">15. em&amp;em 17.0</div>
+<div class="line">16. COOKIES 16.25</div>
+<div class="line">17. Aggie Austin 15.75</div>
+<div class="line">17. Badgers Rock! 15.75</div>
+<div class="line">17. Big 12 Bibby 15.75</div>
+<div class="line">20. Sir Fluffy McFlufferson 15.0</div>
+<div class="line">21. WD50 14.25</div>
+<div class="line">22. <strong>Dazed &amp; Confoosballed 11.0</strong></div>
 </div>
 </div>
 </body>
