--- a/bowl_pool/test/2023-2024/results.html
+++ b/bowl_pool/test/2023-2024/results.html
@@ -900,33 +900,425 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>18</td>
+<td>Quick Lane Bowl</td>
+<td>Minnesota</td>
+<td>Bowling Green</td>
+<td>5.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>19</td>
+<td>First Responder Bowl</td>
+<td>Texas State</td>
+<td>Rice</td>
+<td>4.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>20</td>
+<td>Guaranteed Rate Bowl</td>
+<td>Kansas</td>
+<td>UNLV</td>
+<td>11.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>21</td>
+<td>Military Bowl</td>
+<td>Virginia Tech</td>
+<td>Tulane</td>
+<td>7.5</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>22</td>
+<td>Duke's Mayo Bowl</td>
+<td>West Virginia</td>
+<td>North Carolina</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>23</td>
+<td>Holiday Bowl</td>
+<td>Louisville</td>
+<td>USC</td>
+<td>7.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>24</td>
+<td>TexasBowl</td>
+<td>Texas A&amp;M</td>
+<td>Oklahoma State</td>
+<td>3.5</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+</tr>
+<tr><td>25</td>
+<td>Fenway Bowl</td>
+<td>SMU</td>
+<td>Boston College</td>
+<td>10.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>26</td>
+<td>Pinstripe Bowl</td>
+<td>Miami</td>
+<td>Rutgers</td>
+<td>3.5</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>27</td>
+<td>Pop-Tarts Bowl</td>
+<td>Kansas State</td>
+<td>NC State</td>
+<td>3.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>28</td>
+<td>Alamo Bowl</td>
+<td>Arizona</td>
+<td>Oklahoma</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>29</td>
+<td>Gator Bowl</td>
+<td>Clemson</td>
+<td>Kentucky</td>
+<td>7.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>30</td>
+<td>Sun Bowl</td>
+<td>Notre Dame</td>
+<td>Oregon State</td>
+<td>10.5</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>31</td>
+<td>LibertyBowl</td>
+<td>Iowa State</td>
+<td>Memphis</td>
+<td>6.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>10.0</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>6.25</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>6.75</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>14.25</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>31.0</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>11.0</strong></td>
-<td><strong>7.75</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>26.0</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>14.25</strong></td>
 </tr>
 </tbody>
 </table>
