--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-29 19:20:19</em></div>
-<div class="line"><em>Last bowl scored:  Alamo Bowl (Arizona vs. Oklahoma)</em></div>
+<div class="line"><em>Last updated:  2023-12-29 19:30:43</em></div>
+<div class="line"><em>Last bowl scored:  LibertyBowl (Iowa State vs. Memphis)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 29.5</strong></div>
-<div class="line">2. <strong>Dbo 24.5</strong></div>
-<div class="line">3. <strong>bugabugaroo 23.5</strong></div>
-<div class="line">4. Kylo Bad Dog 21.5</div>
-<div class="line">4. Sascha Picks Dogs 21.5</div>
-<div class="line">6. SEC Shipley 20.75</div>
-<div class="line">7. MamaDAWG 20.25</div>
-<div class="line">8. #MamaBear 18.5</div>
-<div class="line">8. Manda Panda 18.5</div>
-<div class="line">10. LadyLonghorn 18.25</div>
-<div class="line">11. Bear-in-Law 17.25</div>
-<div class="line">12. The New Guy 17.0</div>
-<div class="line">13. Rando Cal Rece Ian 16.5</div>
-<div class="line">14. COOKIES 16.25</div>
-<div class="line">15. GlamKam 15.25</div>
-<div class="line">16. em&amp;em 15.0</div>
-<div class="line">17. Badgers Rock! 14.75</div>
-<div class="line">18. Aggie Austin 14.25</div>
-<div class="line">19. Sir Fluffy McFlufferson 14.0</div>
-<div class="line">20. Big 12 Bibby 13.75</div>
-<div class="line">21. WD50 12.25</div>
-<div class="line">22. <strong>Dazed &amp; Confoosballed 8.0</strong></div>
+<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 31.0</strong></div>
+<div class="line">2. <strong>Dbo 26.0</strong></div>
+<div class="line">3. <strong>bugabugaroo 25.5</strong></div>
+<div class="line">4. Kylo Bad Dog 25.0</div>
+<div class="line">5. MamaDAWG 23.75</div>
+<div class="line">6. SEC Shipley 23.25</div>
+<div class="line">7. Sascha Picks Dogs 23.0</div>
+<div class="line">8. #MamaBear 22.0</div>
+<div class="line">9. LadyLonghorn 21.75</div>
+<div class="line">10. Manda Panda 21.5</div>
+<div class="line">11. The New Guy 19.5</div>
+<div class="line">12. Bear-in-Law 19.25</div>
+<div class="line">13. Rando Cal Rece Ian 18.5</div>
+<div class="line">14. GlamKam 17.25</div>
+<div class="line">15. em&amp;em 17.0</div>
+<div class="line">16. COOKIES 16.25</div>
+<div class="line">17. Aggie Austin 15.75</div>
+<div class="line">17. Badgers Rock! 15.75</div>
+<div class="line">17. Big 12 Bibby 15.75</div>
+<div class="line">20. Sir Fluffy McFlufferson 15.0</div>
+<div class="line">21. WD50 14.25</div>
+<div class="line">22. <strong>Dazed &amp; Confoosballed 11.0</strong></div>
 </div>
 </div>
 </body>
