--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -1208,33 +1208,117 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>29</td>
+<td>Gator Bowl</td>
+<td>Clemson</td>
+<td>Kentucky</td>
+<td>7.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>30</td>
+<td>Sun Bowl</td>
+<td>Notre Dame</td>
+<td>Oregon State</td>
+<td>10.5</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>31</td>
+<td>LibertyBowl</td>
+<td>Iowa State</td>
+<td>Memphis</td>
+<td>6.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>18.5</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>29.5</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>23.5</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>31.0</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>25.5</strong></td>
 <td><strong>16.25</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>24.5</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>14.0</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>26.0</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>12.25</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>14.25</strong></td>
 </tr>
 </tbody>
 </table>
