--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,29 +364,29 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-29 19:30:43</em></div>
-<div class="line"><em>Last bowl scored:  LibertyBowl (Iowa State vs. Memphis)</em></div>
+<div class="line"><em>Last updated:  2023-12-30 10:30:13</em></div>
+<div class="line"><em>Last bowl scored:  Cotton Bowl (Ohio State vs. Missouri)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 31.0</strong></div>
-<div class="line">2. <strong>Dbo 26.0</strong></div>
-<div class="line">3. <strong>bugabugaroo 25.5</strong></div>
-<div class="line">4. Kylo Bad Dog 25.0</div>
-<div class="line">5. MamaDAWG 23.75</div>
-<div class="line">6. SEC Shipley 23.25</div>
-<div class="line">7. Sascha Picks Dogs 23.0</div>
+<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 33.5</strong></div>
+<div class="line">2. <strong>Dbo 28.5</strong></div>
+<div class="line">3. <strong>bugabugaroo 28.0</strong></div>
+<div class="line">4. Kylo Bad Dog 27.5</div>
+<div class="line">5. Sascha Picks Dogs 25.5</div>
+<div class="line">6. MamaDAWG 23.75</div>
+<div class="line">7. SEC Shipley 23.25</div>
 <div class="line">8. #MamaBear 22.0</div>
-<div class="line">9. LadyLonghorn 21.75</div>
-<div class="line">10. Manda Panda 21.5</div>
-<div class="line">11. The New Guy 19.5</div>
-<div class="line">12. Bear-in-Law 19.25</div>
-<div class="line">13. Rando Cal Rece Ian 18.5</div>
-<div class="line">14. GlamKam 17.25</div>
-<div class="line">15. em&amp;em 17.0</div>
-<div class="line">16. COOKIES 16.25</div>
-<div class="line">17. Aggie Austin 15.75</div>
-<div class="line">17. Badgers Rock! 15.75</div>
-<div class="line">17. Big 12 Bibby 15.75</div>
+<div class="line">8. The New Guy 22.0</div>
+<div class="line">10. LadyLonghorn 21.75</div>
+<div class="line">11. Manda Panda 21.5</div>
+<div class="line">12. GlamKam 19.75</div>
+<div class="line">13. em&amp;em 19.5</div>
+<div class="line">14. Bear-in-Law 19.25</div>
+<div class="line">15. Rando Cal Rece Ian 18.5</div>
+<div class="line">16. Badgers Rock! 18.25</div>
+<div class="line">17. COOKIES 16.25</div>
+<div class="line">18. Aggie Austin 15.75</div>
+<div class="line">18. Big 12 Bibby 15.75</div>
 <div class="line">20. Sir Fluffy McFlufferson 15.0</div>
 <div class="line">21. WD50 14.25</div>
 <div class="line">22. <strong>Dazed &amp; Confoosballed 11.0</strong></div>
