--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -1292,6 +1292,34 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 </tr>
+<tr><td>32</td>
+<td>Cotton Bowl</td>
+<td>Ohio State</td>
+<td>Missouri</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
@@ -1299,25 +1327,25 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td><strong>22.0</strong></td>
 <td><strong>15.75</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>31.0</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>33.5</strong></td>
 <td><strong>19.25</strong></td>
 <td><strong>15.75</strong></td>
-<td><strong>25.5</strong></td>
+<td><strong>28.0</strong></td>
 <td><strong>16.25</strong></td>
 <td><strong>11.0</strong></td>
-<td><strong>26.0</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>25.0</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>27.5</strong></td>
 <td><strong>21.75</strong></td>
 <td><strong>23.75</strong></td>
 <td><strong>21.5</strong></td>
 <td><strong>18.5</strong></td>
-<td><strong>23.0</strong></td>
+<td><strong>25.5</strong></td>
 <td><strong>23.25</strong></td>
 <td><strong>15.0</strong></td>
-<td><strong>19.5</strong></td>
+<td><strong>22.0</strong></td>
 <td><strong>14.25</strong></td>
 </tr>
 </tbody>
