--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -1320,33 +1320,117 @@ ul.auto-toc {
 <td>2.5</td>
 <td>0.0</td>
 </tr>
+<tr><td>33</td>
+<td>Peach Bowl</td>
+<td>Penn State</td>
+<td>Ole Miss</td>
+<td>4.5</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>4.0<sup>*</sup></td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+</tr>
+<tr><td>34</td>
+<td>Music City Bowl</td>
+<td>Auburn</td>
+<td>Maryland</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+</tr>
+<tr><td>35</td>
+<td>Orange Bowl</td>
+<td>Georgia</td>
+<td>Florida State</td>
+<td>14.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>22.0</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>33.5</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>15.75</strong></td>
 <td><strong>28.0</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>27.5</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>40.75</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>30.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>32.75</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>30.5</strong></td>
 <td><strong>21.75</strong></td>
 <td><strong>23.75</strong></td>
-<td><strong>21.5</strong></td>
+<td><strong>24.5</strong></td>
 <td><strong>18.5</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>23.25</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>14.25</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>20.25</strong></td>
 </tr>
 </tbody>
 </table>
