--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,30 +364,30 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-30 18:15:44</em></div>
-<div class="line"><em>Last bowl scored:  Orange Bowl (Georgia vs. Florida State)</em></div>
+<div class="line"><em>Last updated:  2023-12-30 18:58:00</em></div>
+<div class="line"><em>Last bowl scored:  Arizona Bowl (Toledo vs. Wyoming)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 40.75</strong></div>
-<div class="line">2. <strong>Dbo 32.75</strong></div>
-<div class="line">3. <strong>Kylo Bad Dog 30.5</strong></div>
-<div class="line">4. bugabugaroo 30.0</div>
-<div class="line">5. Sascha Picks Dogs 29.75</div>
-<div class="line">6. SEC Shipley 29.25</div>
-<div class="line">6. The New Guy 29.25</div>
-<div class="line">8. #MamaBear 28.0</div>
-<div class="line">9. em&amp;em 26.5</div>
-<div class="line">10. GlamKam 25.75</div>
-<div class="line">11. Manda Panda 24.5</div>
+<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 41.75</strong></div>
+<div class="line">2. <strong>Dbo 33.75</strong></div>
+<div class="line">3. <strong>Kylo Bad Dog 31.5</strong></div>
+<div class="line">4. bugabugaroo 31.0</div>
+<div class="line">5. Sascha Picks Dogs 30.75</div>
+<div class="line">6. SEC Shipley 30.25</div>
+<div class="line">7. The New Guy 29.25</div>
+<div class="line">8. #MamaBear 29.0</div>
+<div class="line">9. em&amp;em 27.5</div>
+<div class="line">10. GlamKam 26.75</div>
+<div class="line">11. Manda Panda 25.5</div>
 <div class="line">12. MamaDAWG 23.75</div>
-<div class="line">13. COOKIES 22.5</div>
-<div class="line">14. LadyLonghorn 21.75</div>
-<div class="line">15. Bear-in-Law 21.25</div>
-<div class="line">16. Aggie Austin 20.75</div>
-<div class="line">17. Badgers Rock! 20.25</div>
-<div class="line">17. WD50 20.25</div>
-<div class="line">19. Big 12 Bibby 18.75</div>
-<div class="line">20. Rando Cal Rece Ian 18.5</div>
+<div class="line">13. COOKIES 23.5</div>
+<div class="line">14. LadyLonghorn 22.75</div>
+<div class="line">15. Bear-in-Law 22.25</div>
+<div class="line">16. Aggie Austin 21.75</div>
+<div class="line">17. WD50 21.25</div>
+<div class="line">18. Badgers Rock! 20.25</div>
+<div class="line">19. Big 12 Bibby 19.75</div>
+<div class="line">20. Rando Cal Rece Ian 19.5</div>
 <div class="line">21. Sir Fluffy McFlufferson 18.25</div>
 <div class="line">22. <strong>Dazed &amp; Confoosballed 14.0</strong></div>
 </div>
