--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -1404,33 +1404,61 @@ ul.auto-toc {
 <td>3.0<sup>*</sup></td>
 <td>3.0<sup>*</sup></td>
 </tr>
+<tr><td>36</td>
+<td>Arizona Bowl</td>
+<td>Toledo</td>
+<td>Wyoming</td>
+<td>1.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>28.0</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>40.75</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>30.0</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>32.75</strong></td>
-<td><strong>26.5</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>30.5</strong></td>
+<td><strong>29.0</strong></td>
 <td><strong>21.75</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>41.75</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>31.0</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>33.75</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>31.5</strong></td>
+<td><strong>22.75</strong></td>
 <td><strong>23.75</strong></td>
-<td><strong>24.5</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>29.75</strong></td>
-<td><strong>29.25</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>30.75</strong></td>
+<td><strong>30.25</strong></td>
 <td><strong>18.25</strong></td>
 <td><strong>29.25</strong></td>
-<td><strong>20.25</strong></td>
+<td><strong>21.25</strong></td>
 </tr>
 </tbody>
 </table>
