jan 1 update with bonus picks

--- a/bowl_pool/2023-2024/picks.html
+++ b/bowl_pool/2023-2024/picks.html
@@ -1583,8 +1583,8 @@ ul.auto-toc {
 <td>Michigan</td>
 <td>Texas</td>
 <td>Texas</td>
-<td>Texas</td>
-<td>Michigan</td>
+<td>None</td>
+<td>None</td>
 <td>Texas</td>
 <td>Texas</td>
 <td>Texas</td>
@@ -1599,6 +1599,118 @@ ul.auto-toc {
 <td>Alabama</td>
 <td>Michigan</td>
 <td>Texas</td>
+</tr>
+<tr><td>B2</td>
+<td>Will more than 62 total points be scored in the Sugar Bowl (Texas vs. Washington)?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>No</td>
+<td>No</td>
+<td>Yes</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>None</td>
+<td>None</td>
+<td>No</td>
+<td>Yes</td>
+<td>No</td>
+<td>Yes</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr><td>B3</td>
+<td>Will Michael Penix pass for more than 309 yards against Texas?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>None</td>
+<td>None</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+<td>Yes</td>
+</tr>
+<tr><td>B4</td>
+<td>Will more than 44 total points be scored in the Rose Bowl (Michigan vs. Alabama)?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>None</td>
+<td>None</td>
+<td>Yes</td>
+<td>No</td>
+<td>No</td>
+<td>Yes</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+<td>No</td>
+<td>Yes</td>
+</tr>
+<tr><td>B5</td>
+<td>Will Jalen Milroe have more than 234 yards of total offense against Michigan?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>None</td>
+<td>None</td>
+<td>Yes</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+<td>No</td>
+<td>Yes</td>
 </tr>
 </tbody>
 </table>
