jan 1 update with bonus picks 1

--- a/bowl_pool/2023-2024/picks.html
+++ b/bowl_pool/2023-2024/picks.html
@@ -1583,14 +1583,14 @@ ul.auto-toc {
 <td>Michigan</td>
 <td>Texas</td>
 <td>Texas</td>
-<td>None</td>
-<td>None</td>
+<td>Texas</td>
+<td>Michigan</td>
 <td>Texas</td>
 <td>Texas</td>
 <td>Texas</td>
 <td>Texas</td>
 <td>Washington</td>
-<td>Michigan</td>
+<td>Texas</td>
 <td>Texas</td>
 <td>Texas</td>
 <td>Texas</td>
@@ -1610,9 +1610,9 @@ ul.auto-toc {
 <td>Yes</td>
 <td>No</td>
 <td>Yes</td>
-<td>Yes</td>
-<td>None</td>
-<td>None</td>
+<td>No</td>
+<td>No</td>
+<td>No</td>
 <td>No</td>
 <td>Yes</td>
 <td>No</td>
@@ -1638,9 +1638,9 @@ ul.auto-toc {
 <td>Yes</td>
 <td>No</td>
 <td>Yes</td>
+<td>No</td>
 <td>Yes</td>
-<td>None</td>
-<td>None</td>
+<td>Yes</td>
 <td>No</td>
 <td>Yes</td>
 <td>Yes</td>
@@ -1665,10 +1665,10 @@ ul.auto-toc {
 <td>Yes</td>
 <td>Yes</td>
 <td>Yes</td>
+<td>No</td>
+<td>No</td>
 <td>Yes</td>
 <td>Yes</td>
-<td>None</td>
-<td>None</td>
 <td>Yes</td>
 <td>No</td>
 <td>No</td>
@@ -1693,10 +1693,10 @@ ul.auto-toc {
 <td>Yes</td>
 <td>Yes</td>
 <td>Yes</td>
+<td>No</td>
+<td>No</td>
 <td>Yes</td>
 <td>Yes</td>
-<td>None</td>
-<td>None</td>
 <td>Yes</td>
 <td>No</td>
 <td>No</td>
