--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2024-01-01 11:37:26</em></div>
-<div class="line"><em>Last bowl scored:  Arizona Bowl (Toledo vs. Wyoming)</em></div>
+<div class="line"><em>Last updated:  2024-01-02 10:49:42</em></div>
+<div class="line"><em>Last bowl scored:  Sugar (Texas vs. Washington)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 41.75</strong></div>
-<div class="line">2. <strong>Dbo 33.75</strong></div>
-<div class="line">3. <strong>Kylo Bad Dog 31.5</strong></div>
-<div class="line">4. bugabugaroo 31.0</div>
-<div class="line">5. Sascha Picks Dogs 30.75</div>
-<div class="line">6. SEC Shipley 30.25</div>
-<div class="line">7. The New Guy 29.25</div>
-<div class="line">8. #MamaBear 29.0</div>
-<div class="line">9. em&amp;em 27.5</div>
-<div class="line">10. GlamKam 26.75</div>
-<div class="line">11. Manda Panda 25.5</div>
-<div class="line">12. MamaDAWG 23.75</div>
-<div class="line">13. COOKIES 23.5</div>
-<div class="line">14. LadyLonghorn 22.75</div>
-<div class="line">15. Bear-in-Law 22.25</div>
-<div class="line">16. Aggie Austin 21.75</div>
-<div class="line">17. WD50 21.25</div>
-<div class="line">18. Badgers Rock! 20.25</div>
-<div class="line">19. Big 12 Bibby 19.75</div>
-<div class="line">20. Rando Cal Rece Ian 19.5</div>
-<div class="line">21. Sir Fluffy McFlufferson 18.25</div>
-<div class="line">22. <strong>Dazed &amp; Confoosballed 14.0</strong></div>
+<div class="line">1. <strong>Barkside Ballers (Wylie &amp; Flapjack) 44.75</strong></div>
+<div class="line">2. <strong>SEC Shipley 41.25</strong></div>
+<div class="line">3. <strong>The New Guy 38.25</strong></div>
+<div class="line">4. bugabugaroo 38.0</div>
+<div class="line">5. Dbo 36.75</div>
+<div class="line">5. GlamKam 36.75</div>
+<div class="line">5. Sascha Picks Dogs 36.75</div>
+<div class="line">8. #MamaBear 36.0</div>
+<div class="line">9. Kylo Bad Dog 34.5</div>
+<div class="line">10. COOKIES 32.5</div>
+<div class="line">10. em&amp;em 32.5</div>
+<div class="line">12. Manda Panda 31.5</div>
+<div class="line">13. Bear-in-Law 30.25</div>
+<div class="line">13. Sir Fluffy McFlufferson 30.25</div>
+<div class="line">15. LadyLonghorn 29.75</div>
+<div class="line">15. MamaDAWG 29.75</div>
+<div class="line">17. Rando Cal Rece Ian 29.5</div>
+<div class="line">18. Badgers Rock! 29.25</div>
+<div class="line">18. WD50 29.25</div>
+<div class="line">20. Aggie Austin 28.75</div>
+<div class="line">21. Big 12 Bibby 27.75</div>
+<div class="line">22. <strong>Dazed &amp; Confoosballed 22.0</strong></div>
 </div>
 </div>
 </body>
