--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -1432,33 +1432,285 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>37</td>
+<td>ReliaQuest Bowl</td>
+<td>LSU</td>
+<td>Wisconsin</td>
+<td>10.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+</tr>
+<tr><td>38</td>
+<td>Fiesta Bowl</td>
+<td>Oregon</td>
+<td>Liberty</td>
+<td>15.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+</tr>
+<tr><td>39</td>
+<td>Citrus Bowl</td>
+<td>Tennessee</td>
+<td>Iowa</td>
+<td>7.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>40</td>
+<td>Rose Bowl</td>
+<td>Michigan</td>
+<td>Alabama</td>
+<td>1.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>41</td>
+<td>Sugar</td>
+<td>Texas</td>
+<td>Washington</td>
+<td>4.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>B2</td>
+<td>Will more than 62 total points be scored in the Sugar Bowl (Texas vs. Washington)?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>B3</td>
+<td>Will Michael Penix pass for more than 309 yards against Texas?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>B4</td>
+<td>Will more than 44 total points be scored in the Rose Bowl (Michigan vs. Alabama)?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>B5</td>
+<td>Will Jalen Milroe have more than 234 yards of total offense against Michigan?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>29.0</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>41.75</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>31.0</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>33.75</strong></td>
-<td><strong>27.5</strong></td>
-<td><strong>26.75</strong></td>
-<td><strong>31.5</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>30.75</strong></td>
-<td><strong>30.25</strong></td>
-<td><strong>18.25</strong></td>
+<td><strong>36.0</strong></td>
+<td><strong>28.75</strong></td>
 <td><strong>29.25</strong></td>
-<td><strong>21.25</strong></td>
+<td><strong>44.75</strong></td>
+<td><strong>30.25</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>38.0</strong></td>
+<td><strong>32.5</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>36.75</strong></td>
+<td><strong>32.5</strong></td>
+<td><strong>36.75</strong></td>
+<td><strong>34.5</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>31.5</strong></td>
+<td><strong>29.5</strong></td>
+<td><strong>36.75</strong></td>
+<td><strong>41.25</strong></td>
+<td><strong>30.25</strong></td>
+<td><strong>38.25</strong></td>
+<td><strong>29.25</strong></td>
 </tr>
 </tbody>
 </table>
