--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -765,6 +765,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>11</td>
+<td>SHERATON HAWAIʻI BOWL</td>
+<td>California</td>
+<td>Hawaii</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -870,30 +903,30 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>12.25</strong></td>
-<td><strong>14.75</strong></td>
+<td><strong>15.75</strong></td>
 <td><strong>12.25</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>4.0</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>8.25</strong></td>
-<td><strong>10.0</strong></td>
 <td><strong>10.25</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>7.25</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>10.75</strong></td>
+<td><strong>4.0</strong></td>
 <td><strong>15.25</strong></td>
 <td><strong>8.25</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>9.25</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>11.25</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>8.0</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>7.25</strong></td>
 <td><strong>10.25</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>9.25</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>9.5</strong></td>
+<td><strong>11.5</strong></td>
+<td><strong>9.25</strong></td>
+<td><strong>11.25</strong></td>
 <td><strong>14.25</strong></td>
 <td><strong>8.0</strong></td>
 </tr>
