--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,7 +365,7 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-25 02:16:49</em></div>
+<div class="line"><em>Last updated:  2025-12-25 02:21:31</em></div>
 <div class="line"><em>Last bowl scored:  SHERATON HAWAIʻI BOWL (California vs. Hawaii)</em></div>
 </div>
 <div class="line-block">
@@ -373,28 +373,28 @@ ul.auto-toc {
 <div class="line">2. <strong>Vibe-free since '73 15.75</strong></div>
 <div class="line">3. <strong>Sherrone Moore's Bad Day 15.25</strong></div>
 <div class="line">4. <strong>Battered Austin Syndrome 14.5</strong></div>
-<div class="line">5. <strong>We Pay Players 14.25</strong></div>
-<div class="line">6. <strong>Mama Dawg 13.75</strong></div>
-<div class="line">7. <strong>Eclipse 13.25</strong></div>
-<div class="line">8. <strong>#MamaBear 13.0</strong></div>
-<div class="line">9. <strong>Down 12.5</strong></div>
-<div class="line">10. <strong>Barkside Ballers 12.25</strong></div>
-<div class="line">10. <strong>Dazed and Confoosballed 12.25</strong></div>
-<div class="line">10. <strong>First Round SIL 12.25</strong></div>
-<div class="line">13. <strong>Wisconsin shoud've been here 11.75</strong></div>
-<div class="line">14. <strong>Just Call Me Dr. 11.5</strong></div>
-<div class="line">15. <strong>Sierra LeCat Dowdle 11.25</strong></div>
-<div class="line">15. <strong>Upside 11.25</strong></div>
-<div class="line">17. <strong>Sascha Picks Dogs 10.25</strong></div>
-<div class="line">17. <strong>NoNND-Bo 2 10.25</strong></div>
-<div class="line">19. <strong>bugaroo 10.0</strong></div>
-<div class="line">20. <strong>BlueOrRed 9.5</strong></div>
-<div class="line">21. <strong>Call Me An Optimist 9.25</strong></div>
-<div class="line">21. <strong>Not So New Guy 9.25</strong></div>
-<div class="line">23. <strong>Momma Longhorn 8.25</strong></div>
-<div class="line">24. <strong>Arandas legacy Year 8.0</strong></div>
-<div class="line">24. <strong>Game of Throws 8.0</strong></div>
-<div class="line">26. <strong>NoNND-Bo 1 7.25</strong></div>
+<div class="line">5. We Pay Players 14.25</div>
+<div class="line">6. Mama Dawg 13.75</div>
+<div class="line">7. Eclipse 13.25</div>
+<div class="line">8. #MamaBear 13.0</div>
+<div class="line">9. Down 12.5</div>
+<div class="line">10. Barkside Ballers 12.25</div>
+<div class="line">10. Dazed and Confoosballed 12.25</div>
+<div class="line">10. First Round SIL 12.25</div>
+<div class="line">13. Wisconsin shoud've been here 11.75</div>
+<div class="line">14. Just Call Me Dr. 11.5</div>
+<div class="line">15. Sierra LeCat Dowdle 11.25</div>
+<div class="line">15. Upside 11.25</div>
+<div class="line">17. Sascha Picks Dogs 10.25</div>
+<div class="line">17. NoNND-Bo 2 10.25</div>
+<div class="line">19. bugaroo 10.0</div>
+<div class="line">20. BlueOrRed 9.5</div>
+<div class="line">21. Call Me An Optimist 9.25</div>
+<div class="line">21. Not So New Guy 9.25</div>
+<div class="line">23. Momma Longhorn 8.25</div>
+<div class="line">24. Arandas legacy Year 8.0</div>
+<div class="line">24. Game of Throws 8.0</div>
+<div class="line">26. NoNND-Bo 1 7.25</div>
 <div class="line">27. <strong>The New Mendoza Line 4.0</strong></div>
 </div>
 </div>
